2006-03-27  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	Version bump: 1.0.2

2006-03-17  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	* config/Xsession.cpp: 
	* config/Makefile.am:
	Bug #5898 <https://bugs.freedesktop.org/show_bug.cgi?id=5898>
	Use mktemp command to create files safely in TMPDIR or /tmp
	on systems that have it - don't try to create files there if
	mktemp is not present.   Fix based on NetBSD fix from
	<http://www.netbsd.org/cgi-bin/query-pr-single.pl?number=32805> .

2006-03-16  Jeremy C. Reed  <reed@reedmedia.net>

	reviewed by: Alan Coopersmith

	* configure.ac:
	DragonFly is a BSD, so is CSRG_BASED and use su with -m option.

2006-03-16  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	* daemon.c:
	* session.c:
	* util.c:
	Convert checks for <grp.h>, daemon(), and setpgrp arguments to
	autoconf tests instead of checking OS name #ifdefs.

2006-03-10  Alan Coopersmith  <alan.coopersmith@sun.com>

	* chooser.c: 
	Coverity ids #722, 723, 724, 725, 726, 727, 728:
	Need to XtFree the values returned by XawListShowCurrent to plug
	memory leaks.

	* socket.c (UpdateMcastGroup): 
	Coverity id #834:  
	After joining a multicast group, add group pointer to the list of
	active multicast groups instead of just leaking the group pointer.

2006-03-09  Alan Coopersmith  <alan.coopersmith@sun.com>

	* socket.c: (CreateSocklistEntry):
	Coverity id #332: 
	When malloc fails, don't just print an error and continue on using
	the NULL pointer, return NULL to the caller.

2006-03-01  Matthias Hopf  <mhopf@suse.de>

	* greeter/verify.c: (PAM_conv):
	openSUSE bug #142954
	Fixed potential segfault on OOM condition.

2006-02-24  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac:
	* session.c:
	Bug #6036 <https://bugs.freedesktop.org/show_bug.cgi?id=6036>
	Check for key_setnet declaration before defining it to avoid
	compiler error of conflicting types on DragonFly BSD
