@@ -1,3 +1,14 @@
+2006-03-30  Alan Coopersmith  <alan.coopersmith@sun.com>
+
+	* configure.ac:
+	* daemon.c:
+	* util.c:
+	Drop all setpgrp/setpgid silliness and just use setsid everywhere.
+	(Assumes all platforms are at least POSIX.1-1990 compliant.)
+
+	* daemon.c:
+	Check for error return from daemon() function.
+
 2006-03-27  Alan Coopersmith  <alan.coopersmith@sun.com>
 
 	* configure.ac: 
